--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.godofmafia.godofmafia">
     <uses-feature android:name="android.hardware.camera"
         android:required="false" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.godofmafia.godofmafia.fileprovider"
+            android:exported="false"
+            android:enabled="true"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
         <activity android:name=".FirstActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -23,6 +33,6 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ThirdActivity"
             android:screenOrientation="landscape"/>
-    </application>
 
+    </application>
 </manifest>
